# project1917-26

./: README.md  config.yaml  pyproject.toml
bash_scripts/: gazedep_extract_project_ANN.slrm  ipca_movie_patch.pbs  ipca_movie_patches.pbs  ipca_movie_patches.slrm  lagged_encoding_comparisons.slrm  lagged_encoding_comparisons_dipsen.slrm  multivariate_lagged_comparisons.pbs  multivariate_lagged_comparisons.slrm  multivariate_lagged_comparisons_dipsen.slrm  test_dipsen.slrm  test_dipsen_par.slrm  test_dipsen_par.slrm.bak-20260506-160230  test_dipsen_par.slrm.bak-20260506-160646
old_scripts/dRSA/: LGN_mod.m  Project1917_cluster_shell_parMODMODSUBREP.m  Project1917_cluster_shell_parSUBMODCON.m  Project1917_dRSA_PLOT.m  Project1917_dRSA_PLOT_allsubs_fixdep.m  Project1917_dRSA_fixdep_sub02.m  Project1917_dRSA_inclMNN.m  Project1917_dRSA_randperms.m  Project1917_dRSA_randperms_sub0506.m  Project1917_dRSA_simulation.m  Project1917_dRSA_simulation_fixdep_sub02.m  Project1917_dRSA_singlesubstats.m  Project1917_master_dRSA.m  ViTPose_gaze_check.m  compute_LGN_mod.m  convert_ViT_models.m  convert_alexnet_models.m  convert_resnet_models.m  extract_max.m  plot_1_2results.m  plot_ingmar_results.asv  plot_ingmar_results.m  plot_results.asv  plot_results.m  plot_simulation.asv  plot_simulation.m  tProject1917_dRSA.asv  trim_mod_5s.m
old_scripts/docs/: SGE_commands.txt
old_scripts/jobs_scripts/: LGN_mod.sh  dRSA.sh  dRSA_1_2.sh  dRSA_general.sh  downsample.sh  get_vid_stats.sh  launch_dRSA.sh  preproc1.sh  preproc3.sh  preproc5.sh  simulation.sh
old_scripts/py_scripts/: p.py  (+15 more)
(+114 files in other folders)
